# cftc-cot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
examples/: quickstart.py
src/cftc_cot/: __init__.py  analysis.py  cache.py  cli.py  client.py  exceptions.py  fields.py  mcp_server.py  query.py
tests/: test_analysis.py  test_cache.py  test_cli.py  test_client.py  test_fields.py  test_mcp.py  test_query.py
