[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cftc-cot"
version = "0.1.0"
description = "Python SDK for CFTC Commitments of Traders data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "sodapy>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
