[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cftc-cot-soda"
version = "0.5.0"
description = "Python SDK for CFTC Commitments of Traders data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "sodapy>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
cache = ["diskcache>=5.0"]
mcp = ["mcp>=1.2"]

[project.scripts]
cftc-cot = "cftc_cot.cli:main"
cftc-cot-mcp = "cftc_cot.mcp_server:main"
